# rsnn-eta

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
benches/: tick.rs
docs/superpowers/plans/: 2026-04-21-rsnn-eta.md
docs/superpowers/specs/: 2026-04-21-rsnn-eta-design.md
src/: builder.rs  config.rs  decoder.rs  encoder.rs  estimator.rs  lib.rs  lif.rs  network.rs  persistence.rs  stdp.rs  tracker.rs
tests/: comparison.rs  concurrency.rs  edge_cases.rs  efficiency.rs  integration.rs  learning.rs  regression.rs
