[package]
name = "rsnn-eta"
version = "0.1.0"
edition = "2021"
description = "Biologically-inspired ETA estimator using a Recurrent Spiking Neural Network with STDP learning"
license = "MIT"
repository = "https://github.com/xotatera/rsnn-eta"
homepage = "https://github.com/xotatera/rsnn-eta"
documentation = "https://docs.rs/rsnn-eta"
readme = "README.md"
keywords = ["eta", "progress", "spiking-network", "stdp", "estimator"]
categories = ["algorithms", "science"]
exclude = ["docs/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tick"
harness = false
